# raysnek

./: .gitignore  CMakeLists.txt  build_and_run.bat  build_and_run.sh
src/: Entity.hxx  EntityManager.hxx  Game.cxx  Game.hxx  Math.hxx  ResourceManager.hxx  Scene.hxx  SceneManager.cxx  SceneManager.hxx  Viewport.hxx  compile_commands.json  config.hxx  config.hxx.in  dbg.hxx  main.cxx  sceneList.hxx
